// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsComponent snapshot testing with errors property 1`] = `
<div
  className="errors"
>
  <button
    onClick={[Function]}
  />
  {
    "error": {
      "message": "whatever"
    }
  }
  {
    "error": {
      "message": "another"
    }
  }
</div>
`;

exports[`ErrorsComponent snapshot testing with no properties 1`] = `
<div
  className="errors hide"
>
  <button
    onClick={[Function]}
  />
</div>
`;
